[FIX] mail: discuss notification settings properly handle long text
Before this commit, the notification settings in discuss app that is
used to mute channels was not showing items properly in some
languages like vietnamese.

This happens because the width is hard-coded to 150px as to keep the
dropdown menu small.

This commit fixes the issue by putting a max-width of 250px for
dropdown menu and sub-menu, so that it keeps right positioning of
submenu. If text is too long, it know wraps.

closes odoo/odoo#167094

X-original-commit: acaf3d4eef44b53c8371b808513a86b311c54208

--- a/addons/mail/static/src/discuss/core/common/notification_settings.scss
+++ b/addons/mail/static/src/discuss/core/common/notification_settings.scss
@@ -1,3 +1,3 @@
-.o-discuss-NotificationSettings {
-    width: 150px;
+.o-discuss-NotificationSettings, .o-mail-NotificationSettings-submenu {
+    max-width: 250px !important;
 }
